Fix Z-Index

--- a/assets/main.css
+++ b/assets/main.css
@@ -45,7 +45,7 @@ canvas {
   left: 0;
   width: 100% !important;
   height: 100% !important;
-  z-index: -10;
+  z-index: -1000;
 }
 
 #particles-js {
@@ -123,7 +123,7 @@ header {
   width: 100%;
   height: 100vh;
   position: fixed;
-  top: -100vh;
+  top: -1000vh;
   z-index: 50;
   background-color: #16162d;
   border-bottom-right-radius: 100%;
